; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in.c_in_lltable_delete_entry.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in.c_in_lltable_delete_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lltable = type { i32 }
%struct.llentry = type { i32 }

@LLE_DELETED = common dso_local global i32 0, align 4
@LOG_INFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lltable*, %struct.llentry*)* @in_lltable_delete_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @in_lltable_delete_entry(%struct.lltable* %0, %struct.llentry* %1) #0 {
  %3 = alloca %struct.lltable*, align 8
  %4 = alloca %struct.llentry*, align 8
  store %struct.lltable* %0, %struct.lltable** %3, align 8
  store %struct.llentry* %1, %struct.llentry** %4, align 8
  %5 = load i32, i32* @LLE_DELETED, align 4
  %6 = load %struct.llentry*, %struct.llentry** %4, align 8
  %7 = getelementptr inbounds %struct.llentry, %struct.llentry* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load %struct.llentry*, %struct.llentry** %4, align 8
  %11 = call i32 @llentry_free(%struct.llentry* %10)
  ret void
}

declare dso_local i32 @llentry_free(%struct.llentry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
